@@ -1,8 +1,13 @@
 2009-04-14  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	tpwd: + added --zsh option
+
 	genpass.sh: + increased portability
 	+ added sha1sum as an alternative if md5sum is missing
+
+	rand-files.pl: + partially rewritten
+	+ added ranking
+	+ removed "find" functionality (TODO)
 
 2009-04-11  Michal Nazarewicz  <mina86/AT/mina86.com>
 
